@@ -26,12 +26,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="videoUrlField" pref="579" max="32767" attributes="1"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="imageUrlField" pref="579" max="32767" attributes="1"/>
-                          </Group>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="imageUrlField" pref="593" max="32767" attributes="1"/>
+                          <Component id="videoUrlField" alignment="1" pref="593" max="32767" attributes="1"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -205,8 +202,8 @@
     </Component>
     <Component class="javax.swing.JButton" name="imageUrlOpenButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Open..."/>
-        <Property name="toolTipText" type="java.lang.String" value="Open the Image URL in an external browser window"/>
+        <Property name="text" type="java.lang.String" value="Open"/>
+        <Property name="toolTipText" type="java.lang.String" value="Opens the image viewer or launches external browser if not an image"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
@@ -215,7 +212,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="videoUrlOpenButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Open..."/>
+        <Property name="text" type="java.lang.String" value="Open"/>
         <Property name="toolTipText" type="java.lang.String" value="Open the Video URL in an external browser window"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
